<resources>
    <string name="app_name">JCI Madras</string>
    <string name="logo">Logo</string>
    <string name="go">Go</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="x" />
    <string name="event_location">Event Location</string>
    <string name="static_map_view">Static Map View</string>
    <string name="images">Images</string>
    <string name="event_name_comp">Event Name *</string>
    <string name="event_description_comp">Event Description *</string>
    <string name="limit_optional">Limit (Optional)</string>
    <string name="select_date">Select Date</string>
    <string name="hide_map">Hide Map</string>
    <string name="hide_images">Hide Images</string>
    <string name="location">Location</string>
    <string name="add_location">Add Location</string>
    <string name="add_photos">Add Photos</string>
    <string name="register">REGISTER</string>
    <string name="client">Client</string>
    <string name="admin">Admin</string>
    <string name="old_admin_password">Old Admin Password</string>
    <string name="new_admin_password">New Admin Password</string>
    <string name="old_client_password">Old Client Password</string>
    <string name="new_client_password">New Client Password</string>
    <string name="done">Done</string>
    <string name="name_of_jc">Name of JC/Jcrt/Jr.JC</string>
    <string name="name_of_jcrt">Name of JCrt</string>
    <string name="no_of_child">No. of child</string>
    <string name="no_of_guest">No. of guest</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="view_participants">Participants</string>
    <string name="delete_registration">Delete Your Registration</string>
    <string name="participants_for_the_current_event">Participants For The Current Event</string>
    <string name="enter_your_unique_key">Enter your Unique Key</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="no_images">No Images</string>
    <string name="add_event">Add Event</string>
    <string name="add_gallery_name">Add Gallery Name</string>
    <string name="gallery_name">Gallery Name</string>
    <string name="loading">Loading&#8230;</string>
    <string name="jaycee_creed">Jaycee Creed</string>
    <string name="we_believe">We Believe</string>
    <string name="about_pt_1">That faith in God gives meaning and purpose to human life</string>
    <string name="about_pt_2">That the brotherhood of man transcends sovereignty of nations</string>
    <string name="about_pt_3">That eceonomic justice can best be won by free men through free enterprise</string>
    <string name="about_pt_4">That Government should be of laws rather than of men</string>
    <string name="about_pt_5">That earth\'s great treasure lies in human personality \nAnd that service to humanity is the best work of life.</string>
    <string name="vision_of_jci">Vision of JCI</string>
    <string name="vision_text">To be the leading network of young active citizens.</string>
    <string name="mision_of_jci">Mission of JCI</string>
    <string name="mision_text">To provide development opportunities that empowers young people to create positive changes.</string>
    <string name="password">Password</string>
    <string name="jci">JCI</string>
    <string name="madras">MADRAS</string>
    <string name="no_participants_yet">No participants yet!</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="unique_info">Important Note: \nPlease note down this unique ID for future reference.(For editing and deleting)</string>
    <string name="senior">Senior</string>
    <string name="junior">Junior</string>
    <string name="guest">Guest</string>
    <string name="total">Total</string>
    <string name="your_unique_key">Your Unique Key</string>
    <string name="update">Update</string>
    <string name="overflow_menu">Overflow Menu</string>
    <string name="download">Download</string>
    <string name="developers">Designed and developed with ♥ by Adarsh Jain and Sanket Jain. Contact us @</string>
    <string name="info">For any project requests contact me at 8682084784 or mail me at adarshjain9628@gmail.com</string>
    <string name="facebook">Facebook</string>
    <string name="snap">Snapchat</string>
    <string name="insta">Instagram</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="president">President</string>
    <string name="ladies_wing_coordinator">Ladies Wing Coordinator</string>
    <string name="download_members_list">1. Members list</string>
    <string name="members_information">Members Information</string>
    <string name="download_members_anniv">2. Members Anniversary</string>
    <string name="year">Year</string>
    <string name="anniversary_remainder">Anniversary Remainder</string>
    <string name="no_network">No Photos or Network error</string>
    <string name="event_ad">ca-app-pub-6139052770939951/2071743820</string>
    <string name="specific_event_ad">ca-app-pub-6139052770939951/2071743820</string>
    <string name="about_us_ad">ca-app-pub-6139052770939951/1932143024</string>
    <string name="logo_ad">ca-app-pub-6139052770939951/6501943424</string>
    <string name="gallery_ad">ca-app-pub-6139052770939951/7978676627</string>
    <string name="specific_gallery_ad">ca-app-pub-6139052770939951/9455409827</string>
</resources>
