<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    tools:context="com.jcimadras.jcimadras.Fragments.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/jaycee_creed"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/we_believe"
                    android:textColor="@color/colorBlue"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:text="@string/about_pt_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:text="@string/about_pt_2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:text="@string/about_pt_3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:text="@string/about_pt_4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:text="@string/about_pt_5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorBlue"
                    android:padding="8dp"
                    android:text="@string/vision_of_jci"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/vision_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorBlue"
                    android:padding="8dp"
                    android:text="@string/mision_of_jci"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/mision_text" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <include layout="@layout/head_member" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <include layout="@layout/about_mastermind" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
