<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_master"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/developers"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageButton
            android:id="@+id/phone"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/phone"
            android:scaleType="fitCenter"
            android:src="@drawable/whatsapplogo" />

        <ImageButton
            android:id="@+id/mail"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/mail"
            android:scaleType="centerInside"
            android:src="@drawable/inboxsvg" />

        <ImageButton
            android:id="@+id/fb"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/facebook"
            android:scaleType="centerInside"
            android:src="@drawable/fbsvg" />

        <ImageButton
            android:id="@+id/insta"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/insta"
            android:scaleType="centerInside"
            android:src="@drawable/instasvg" />

    </LinearLayout>


</LinearLayout>