<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_logo_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.jcimadras.jcimadras.LogoDisplay">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/logojci"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/jci"
                    android:textColor="@color/colorBlue"
                    android:textSize="72sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/logomadras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logojci"
                    android:text="@string/madras"
                    android:layout_marginStart="70dp"
                    android:textColor="@color/colorBlue"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="48dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/jcilogo" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/hideLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:labelFor="@+id/mainPass"
                android:text="@string/password"
                android:textColor="@color/colorBlue"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/mainPass"
                android:layout_width="match_parent"
                android:layout_marginEnd="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:inputType="textPassword"
                android:textColor="@color/colorBlue" />
            <Button
                android:layout_marginTop="8dp"
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:text="@string/go"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/logo_ad" />
    </LinearLayout>

</RelativeLayout>
