<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jcimadras.jcimadras.ViewParticipants">

    <include
        android:id="@+id/appBar"
        layout="@layout/app_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/participants_for_the_current_event"
                android:textAlignment="center"
                android:textColor="@color/colorBlue"
                android:textSize="20sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/partRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:paddingBottom="8dp" />

                <TextView
                    android:id="@+id/empty_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_participants_yet"
                    android:textColor="@color/colorBlue"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/editRegistration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorBlue"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/deleteRegistration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/colorBlue"
                    android:layout_weight="1"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/enter_your_unique_key"
                    android:textColor="@color/colorBlue" />

                <EditText
                    android:id="@+id/uniqueKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:text="@string/name_of_jc"
                    android:textColor="@color/colorBlue" />

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:inputType="textCapWords" />
            </LinearLayout>

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="8dp"
                android:background="@color/colorBlue"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>


</LinearLayout>
